<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:mlns="http://schemas.android.com/apk/res/android">
    <item
        mlns:id="@+id/xmlRedColor"
        mlns:title="@string/redColor" />

    <item
        mlns:id="@+id/xmlBlueColor"
        mlns:title="@string/blueColor" />

    <item
        mlns:id="@+id/xmlYellowColor"
        mlns:title="@string/yellowColor" />

    <item
        mlns:id="@+id/xmlTextAlign"
        mlns:title="@string/textAlign">
        <menu>
            <item
                mlns:id="@+id/xmlTextLeft"
                mlns:title="@string/left" />
            <item
                mlns:id="@+id/xmlTextCenter"
                mlns:title="@string/center" />
            <item
                mlns:id="@+id/xmlTextRight"
                mlns:title="@string/right" />
        </menu>
    </item>
</menu>